Compiled and booted on latest kernel git tree

--- a/ex00/.config
+++ b/ex00/.config
@@ -553,6 +553,7 @@ CONFIG_PM_SLEEP_SMP=y
 # CONFIG_PM_AUTOSLEEP is not set
 # CONFIG_PM_USERSPACE_AUTOSLEEP is not set
 # CONFIG_PM_WAKELOCKS is not set
+# CONFIG_PM_QOS_CPU_SYSTEM_WAKEUP is not set
 CONFIG_PM=y
 CONFIG_PM_DEBUG=y
 # CONFIG_PM_ADVANCED_DEBUG is not set
@@ -4989,7 +4990,6 @@ CONFIG_CRYPTO_JITTERENTROPY_OSR=1
 # CONFIG_CRYPTO_AEGIS128_AESNI_SSE2 is not set
 # CONFIG_CRYPTO_NHPOLY1305_SSE2 is not set
 # CONFIG_CRYPTO_NHPOLY1305_AVX2 is not set
-# CONFIG_CRYPTO_POLYVAL_CLMUL_NI is not set
 # CONFIG_CRYPTO_SM3_AVX_X86_64 is not set
 # CONFIG_CRYPTO_GHASH_CLMUL_NI_INTEL is not set
 # end of Accelerated Cryptographic Algorithms for CPU (x86)
@@ -5072,6 +5072,7 @@ CONFIG_CRYPTO_LIB_SHA256=y
 CONFIG_CRYPTO_LIB_SHA256_ARCH=y
 CONFIG_CRYPTO_LIB_SHA512=y
 CONFIG_CRYPTO_LIB_SHA512_ARCH=y
+CONFIG_CRYPTO_LIB_SHA3=y
 # end of Crypto library routines
 
 CONFIG_XXHASH=y
