Update assignment 04 Makefile

--- a/ex04/Makefile
+++ b/ex04/Makefile
@@ -1,6 +1,19 @@
-SUDO = sudo
+NAME = ft_usb_keyboard
+RULES = 42-usb-keyboard.rules
 
-install: 42-usb-keyboard.rules
-	$(SUDO) cp $< /etc/udev/rules.d/
+KDIR = /lib/modules/$(shell uname -r)/build
+RULESDIR = /etc/udev/rules.d
 
-.PHONY: install
+obj-m += $(NAME).o
+
+all: modules
+
+clean modules modules_install:
+	$(MAKE) -C $(KDIR) M=$(shell pwd) $@
+
+$(RULESDIR)/$(RULES): $(RULES)
+	cp $< $@
+
+install: modules_install $(RULESDIR)/$(RULES)
+
+.PHONY: all clean modules modules_install install
