Refactor Makefile: standardize target definitions and improve structure

--- a/ex01/Makefile
+++ b/ex01/Makefile
@@ -1,9 +1,16 @@
-obj-m += main.o
+NAME = main
+KDIR = /lib/modules/$(shell uname -r)/build
+obj-m += $(NAME).o
 
-all:
-	$(MAKE) -C /lib/modules/$(shell uname -r)/build M=$(PWD) modules
+all $(NAME).ko: modules
+install: insmod
+uninstall: rmmod
 
-clean:
-	$(MAKE) -C /lib/modules/$(shell uname -r)/build M=$(PWD) clean
+clean modules: FORCE
+	$(MAKE) -C $(KDIR) M=$(shell pwd) $@
 
-.PHONY: all clean
+insmod rmmod: $(NAME).ko
+	$@ $<
+
+FORCE:
+.PHONY: all clean FORCE insmod install modules rmmod uninstall
