--- a/ex05/Makefile
+++ b/ex05/Makefile
@@ -1,14 +1,12 @@
 NAME = ft_dev
-
 KDIR = /lib/modules/$(shell uname -r)/build
-
 obj-m += $(NAME).o
 
-all: modules
-
-clean modules modules_install:
-	$(MAKE) -C $(KDIR) M=$(shell pwd) $@
-
+all $(NAME).ko: modules
 install: modules_install
 
-.PHONY: all clean modules modules_install install
+clean modules modules_install: FORCE
+	$(MAKE) -C $(KDIR) M=$(shell pwd) $@
+
+FORCE:
+.PHONY: all clean FORCE install modules modules_install
