Refactor Makefile: improve module dependency definitions and clean up structure

--- a/ex01/Makefile
+++ b/ex01/Makefile
@@ -3,6 +3,7 @@ KDIR = /lib/modules/$(shell uname -r)/build
 obj-m += $(NAME).o
 
 all $(NAME).ko: modules
+modules: $(NAME).c
 install: insmod
 uninstall: rmmod
 
