Enhance ft_dev module: add user space read functionality and improve Makefile structure

--- a/ex05/Makefile
+++ b/ex05/Makefile
@@ -5,6 +5,7 @@ obj-m += $(NAME).o
 all $(NAME).ko: modules
 modules: $(NAME).c
 modules_install: $(NAME).ko
+reinstall: uninstall install
 
 clean modules modules_install:
 	$(MAKE) -C $(KDIR) M=$(shell pwd) $@
@@ -12,4 +13,7 @@ clean modules modules_install:
 install: modules_install
 	modprobe $(NAME)
 
-.PHONY: all clean install modules modules_install
+uninstall:
+	modprobe -r $(NAME)
+
+.PHONY: all clean install modules modules_install reinstall uninstall
