--- a/ex05/Makefile
+++ b/ex05/Makefile
@@ -1,9 +1,17 @@
 NAME = ft_dev
 KDIR = /lib/modules/$(shell uname -r)/build
+
+SRC_DIR = src
+INC_DIR = include
+SRCS = \
+	$(NAME).c
+
+ccflags-y += -I$(INC_DIR)
 obj-m += $(NAME).o
+$(NAME)-objs += $(addprefix $(SRC_DIR)/,$(SRCS:.c=.o))
 
 all $(NAME).ko: modules
-modules: $(NAME).c
+modules: $(SRC_DIR) $(INC_DIR)
 modules_install: $(NAME).ko
 reinstall: uninstall install
 
