Handle potential errors during module uninstallation in Makefile

--- a/ex05/Makefile
+++ b/ex05/Makefile
@@ -25,7 +25,7 @@ install: modules_install
 	modprobe $(NAME)
 
 uninstall:
-	modprobe -r $(NAME)
+	modprobe -r $(NAME) || true
 
 reinstall: uninstall install
 
